# vameval

./: .gitattributes  .gitignore  Makefile  README.md  generate_vameval.py  pyproject.toml
src/vameval_audio/: __init__.py  cli.py  generator.py
